chapter five started

--- a/git commands.html
+++ b/git commands.html
@@ -1,3 +1,14 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+</head>
+<body>
+    <MTMarkdownOptions output='html4'>
+
 # Git commands
 [Markdown cheatshett](https://github.com/adam-p/Markdown-here/wiki/Markdown-Cheatsheet)
 
@@ -1439,3 +1450,7 @@ At this point, you should be able to go to your Drafts folder, change the To fie
 
 ### Maintaining a Project
 
+
+</MTMarkdownOptions>
+</body>
+</html>
